# unifyroute

./: .gitignore  Dockerfile.api  Dockerfile.gui  LICENSE  MASTER_PLAN.md  MIGRATION_GUIDE.md  NOTICE  README.md  docker-compose.override.yml  docker-compose.yml  generate_test_tokens.py  pyproject.toml  pytest.ini  run-tests.sh  sample.env  test_api.py  unifyroute
.github/: pull_request_template.md
api-gateway/: Dockerfile  pyproject.toml
brain/: pyproject.toml
brain/src/brain/: __init__.py  config.py  errors.py  health.py  importer.py  ranker.py  selector.py  tester.py
credential-vault/: Dockerfile  pyproject.toml
credential-vault/src/credential_vault/: __init__.py  main.py
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  getting-started.md  installation.md  llmway-architecture.docx  llmway-architecture.md  progress-and-todo.md  strategy_context.md  usage.md
gui/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.ts
launcher/: pyproject.toml
migrations/: env.py
quota-poller/: Dockerfile  pyproject.toml
quota-poller/src/quota_poller/: __init__.py  main.py
router/: pyproject.toml  routing.yaml
scripts/: create-key.py  import-keys.py  list-keys.py  run_e2e_tests.sh  seed_tokens.py  setup.py  setup_openai_db.py  start-gateway.sh  unifyroute.service  update-key.py  wizard.py
shared/: pyproject.toml
static/: index.html
tests/: conftest.py  mock_openai_server.py  setup_mock_base.py  setup_mock_tier.py  test_admin_models.py  test_auth.py  test_brain_api.py  test_brain_health.py  test_db.py  (+27 more)
(+69 files in other folders)
