[project]
name = "quota-poller"
version = "0.1.0"
description = "Background service for quota polling"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "redis>=5.1.1",
    "httpx>=0.27.2",
    "shared",
    "router",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }
router = { workspace = true }
